--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "axios": "^0.8.1",
+    "lodash": "^3.10.1",
+    "react-google-maps": "^4.7.1",
+    "react-sparklines": "^1.4.2",
+    "redux-promise": "^0.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
